# Loop

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE.txt  README.md  rustfmt.toml  snapcraft.yaml
Formula/: loop.rb
src/: app.rs  cli.yml  evaluator.rs  io.rs  loop_iterator.rs  loop_step.rs  main.rs  run.rs  setup.rs  state.rs  supervisor.rs  util.rs
tests/: test.rs
