[package]
name = "loop-rs"
version = "0.3.3"
authors = ["Rich Jones <miserlou@gmail.com>"]
description = "UNIX's missing loop command"

documentation = "https://github.com/Miserlou/Loop"
homepage = "https://github.com/Miserlou/Loop"
repository = "https://github.com/Miserlou/Loop"

readme = "README.md"
license = "MIT"

[dependencies]
clap = {version = "2.31", features = ["yaml"]}
humantime = "1.1.1"
isatty = "0.1.8"
regex = "1.0.0"
subprocess = "0.1.12"

[[bin]]
name = "loop"
