[package]
name = "loop-rs"
version = "0.6.1"
authors = ["Rich Jones <miserlou@gmail.com>"]
description = "UNIX's missing loop command"

documentation = "https://github.com/Miserlou/Loop"
homepage = "https://github.com/Miserlou/Loop"
repository = "https://github.com/Miserlou/Loop"

readme = "README.md"
license = "MIT"

[dependencies]
structopt = "0.2" 
humantime = "1.1.1"
atty = "0.2"
regex = "1.0.0"
subprocess = "0.1.12"
tempfile = "3.0.3"

[[bin]]
name = "loop"
path = "src/main.rs"
